Add Twiiter DApp metatags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitter Dapp</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>Twitter Dapp - Create your tweet here!</title>
+    <meta name="title" content="Twitter Dapp - Create your tweet here!" />
+    <meta
+      name="description"
+      content="With Twitter DApp you can express your thought with a tweet then share it with other. Using Web3 blockhain technologies and more!"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://twitter-dapp-bros.netlify.app/" />
+    <meta property="og:title" content="Twitter Dapp - Create your tweet here!" />
+    <meta
+      property="og:description"
+      content="With Twitter DApp you can express your thought with a tweet then share it with other. Using Web3 blockhain technologies and more!"
+    />
+    <meta property="og:image" content="https://ik.imagekit.io/4qbd8umflv/twitter-bg.jpeg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://twitter-dapp-bros.netlify.app/" />
+    <meta property="twitter:title" content="Twitter Dapp - Create your tweet here!" />
+    <meta
+      property="twitter:description"
+      content="With Twitter DApp you can express your thought with a tweet then share it with other. Using Web3 blockhain technologies and more!"
+    />
+    <meta property="twitter:image" content="https://ik.imagekit.io/4qbd8umflv/twitter-bg.jpeg" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="app"></div>
